--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.18.0",
     "hbs": "^4.2.0",
     "mongoose": "^8.4.1",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.3",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
